[gd_scene load_steps=11 format=3 uid="uid://b1iq5k540foks"]

[ext_resource type="Script" path="res://scripts/rain_water_harvesting.gd" id="1_1iqdl"]
[ext_resource type="Texture2D" uid="uid://b68iuv8vaoty7" path="res://assets/RainWaterHarvestingTank.png" id="2_kkrht"]
[ext_resource type="Texture2D" uid="uid://bc6e4502orbgb" path="res://assets/FX001_01.png" id="3_p413p"]
[ext_resource type="Texture2D" uid="uid://73b3tw0x783f" path="res://assets/FX001_02.png" id="4_25t47"]
[ext_resource type="Texture2D" uid="uid://h4kdudrcd6s7" path="res://assets/FX001_03.png" id="5_ny48w"]
[ext_resource type="Texture2D" uid="uid://d1ght1bdqdtin" path="res://assets/FX001_04.png" id="6_jvoy1"]
[ext_resource type="Texture2D" uid="uid://cqikbcy5lf4kk" path="res://assets/FX001_05.png" id="7_xkdkn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ns7xh"]
radius = 11.0
height = 60.0

[sub_resource type="SpriteFrames" id="SpriteFrames_04yx5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_p413p")
}, {
"duration": 1.0,
"texture": ExtResource("4_25t47")
}, {
"duration": 1.0,
"texture": ExtResource("5_ny48w")
}, {
"duration": 1.0,
"texture": ExtResource("6_jvoy1")
}, {
"duration": 1.0,
"texture": ExtResource("7_xkdkn")
}],
"loop": false,
"name": &"Done",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_cd1vu"]
radius = 183.698

[node name="rwh_1" type="StaticBody2D"]
collision_layer = 65
collision_mask = 64
script = ExtResource("1_1iqdl")

[node name="Watertank" type="Sprite2D" parent="."]
position = Vector2(-1, 6)
texture = ExtResource("2_kkrht")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 88)
shape = SubResource("CapsuleShape2D_ns7xh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 18)
scale = Vector2(24.5781, 25.5703)
sprite_frames = SubResource("SpriteFrames_04yx5")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_cd1vu")

[node name="Label" type="Label" parent="."]
offset_left = -70.0
offset_top = 27.0
offset_right = 70.0
offset_bottom = 54.0
text = "Press E to interact"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
